Add database reset tools, docs, and performance optimizations
Introduced scripts and SQL for full database cleanup and manual reset, added comprehensive API and schema documentation, and implemented a new migration for performance optimization with advanced indexing and query tuning. Enhanced CSV seeder to remove duplicates and update existing records, improved query builder timing, and updated project README with detailed setup, architecture, and educational value. Marked key project tasks as complete in the specs.

--- a/mobile-phone-app/package.json
+++ b/mobile-phone-app/package.json
@@ -7,12 +7,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "analyze": "ANALYZE=true npm run build",
+    "optimize": "node scripts/run-performance-optimizations.js",
+    "test:scalability": "node test-scalability.js",
+    "build:optimized": "NODE_ENV=production npm run build",
     "backend": "npx tsx backend/server.ts",
     "backend:dev": "npx tsx watch backend/server.ts",
     "migrate": "npx tsx backend/database/migrate.ts up",
     "migrate:rollback": "npx tsx backend/database/migrate.ts rollback",
     "seed": "npx tsx backend/database/seed.ts",
-    "db:setup": "npm run migrate && npm run seed"
+    "db:clean": "npx tsx backend/database/clean.ts",
+    "db:setup": "npm run migrate && npm run seed",
+    "db:reset": "npm run db:clean && npm run seed"
   },
   "dependencies": {
     "cors": "^2.8.5",
